--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "autoprefixer": "7.1.6",
+    "axios": "^0.18.0",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
     "babel-preset-react-app": "^3.1.2",
@@ -56,7 +57,7 @@
   },
   "prettier": {
     "singleQuote": true,
-      "trailingComma": "all"
+    "trailingComma": "all"
   },
   "scripts": {
     "start": "node scripts/start.js",
